# Integer

./: .gitignore  AGENTS.md  Benchmark.md  CMakeLists.txt  README.md  baseline.json  integer.hpp  main.cpp  md5.cpp  test.py
.github/workflows/: c-cpp.yml  ci.yml
apps/: CMakeLists.txt
apps/calculator/: CMakeLists.txt  main.cpp
apps/driver/: CMakeLists.txt  main.cpp
apps/gmp_bench/: CMakeLists.txt  main.cpp
benchmarks/: CMakeLists.txt  bench_integer.cpp
cmake/: CompilerSettings.cmake  FindGMP.cmake
data/: baseline.json
include/: integer.hpp  md5.hpp
scripts/: bench.py  update_baseline.py  verify_simple.py
src/: md5.cpp
tests/: CMakeLists.txt  test_integer.cpp
